language/src/main/java/com/oracle/truffle/lama/parser/Lama.g4
grammar Lama;

// Parser
program
    : importStatement* topScope EOF
    ;

topScope
    : definition* expression;

importStatement
    : IMPORT LIDENT (',' LIDENT)* ';'?
    ;

scopeExpression
    : definition* expression?
    ;

definition
    : varDefinition
    | funDefinition
    | infixDefinition
    ;

varDefinition
    : VAR varInit (',' varInit)* ';'?
    ;

varInit
    : LIDENT ('=' assignExpression)?
    ;

funDefinition
    : FUN LIDENT '(' patternList? ')' '{' scopeExpression '}' ';'?
    ;

infixDefinition
    : (INFIX | INFIXR | INFIXL) binaryOp (AT | BEFORE | AFTER) binaryOp '(' patternList? ')' '{' scopeExpression '}' ';'?
    ;

patternList
    : pattern (',' pattern)*
    ;

pattern
    : LIDENT '@' pattern                  # aliasPattern
    | SHARP_VAL                           # sharpValPattern
    | SHARP_FUN                           # sharpFunPattern
    | SHARP_STR                           # sharpStrPattern
    | SHARP_ARRAY                         # sharpArrayPattern
    | SHARP_SEXP                          # sharpSexpPattern
    | SHARP_BOX                           # sharpBoxPattern
    | LIDENT                              # varPattern
    | UIDENT '(' patternList? ')'         # sexpPatternWithArgs
    | UIDENT                              # sexpPatternNoArgs
    | '[' patternList? ']'                # arrayPattern
    | '{' patternList? '}'                # listPattern
    | '_'                                 # wildcardPattern
    | DECIMAL                             # decimalPattern
    | STRING                              # stringPattern
    | CHAR                                # charPattern
    | TRUE                                # truePattern
    | FALSE                               # falsePattern
    | '(' pattern ')'                     # parenPattern
    | <assoc=right> pattern COLON pattern # consPattern
    ;

expression
    : sequenceExpression
    ;

sequenceExpression
    : assignExpression (';' assignExpression)*
    ;

assignExpression
    : binaryExpression (ASSIGN assignExpression)?
    ;

binaryExpression
    : prefixExpression (binaryOp prefixExpression)*
    ;

binaryOp
    : PLUS | MINUS | MUL | DIV | MOD
    | EQ | NE | LT | LE | GT | GE
    | AND | OR | COLON
    | CUSTOM_OP
    ;

prefixExpression
    : (MINUS)? postfixExpression
    ;

postfixExpression
    : postfixExpression '(' argumentList? ')'   # callSuffix
    | postfixExpression '[' expression ']'      # indexSuffix
    | postfixExpression '.' LIDENT              # dotSuffix
    | primary                                   # basePrimary
    ;

primary
    : literal                          # litPrimary
    | sexp                             # sexpPrimary
    | identifier                       # idPrimary
    | '(' scopeExpression ')'          # parenPrimary
    | arrayLiteral                     # arrayPrimary
    | listLiteral                      # listPrimary
    | ifExpression                     # ifPrimary
    | letExpression                    # letPrimary
    | caseExpression                   # casePrimary
    | loopExpression                   # loopPrimary
    | SKIP_RULE                        # skipPrimary
    | lambdaExpression                 # lambdaPrimary
    | etaExpression                    # etaPrimary
    | INFIX CUSTOM_OP                  # infixIdPrimary
    ;

etaExpression
    : ETA postfixExpression
    ;

literal
    : DECIMAL
    | STRING
    | CHAR
    | TRUE
    | FALSE
    ;

identifier
    : LIDENT
    | UIDENT
    ;

arrayLiteral
    : '[' ']'
    | '[' expression (',' expression)* ']'
    ;

listLiteral
    : '{' '}'
    | '{' expression (',' expression)* '}'
    ;

sexp
    : UIDENT '(' expression? (',' expression)* ')'
    | UIDENT
    ;

ifExpression
    : IF expression THEN scopeExpression
      (ELIF expression THEN scopeExpression)*
      (ELSE scopeExpression)? FI
    ;

letExpression
    : LET pattern '=' expression IN expression
    ;

caseExpression
    : CASE expression OF caseBranch+ ESAC
    ;

caseBranch
    : pattern '->' expression ('|' pattern '->' expression)*
    ;

loopExpression
    : whileLoop
    | doWhileLoop
    | forLoop
    ;

whileLoop
    : WHILE sequenceExpression DO scopeExpression OD
    ;

doWhileLoop
    : DO scopeExpression WHILE sequenceExpression OD
    ;

forLoop
    : FOR forInit? ',' expression? ',' forStep? DO scopeExpression OD
    ;

forInit
    : scopeExpression
    ;

forStep
    : assignExpression
    ;

lambdaExpression
    : FUN '(' patternList? ')' '{' scopeExpression '}'
    ;

argumentList
    : expression (',' expression)*
    ;

// Lexer
IMPORT : 'import';
VAR    : 'var';
FUN    : 'fun';
IF     : 'if';
THEN   : 'then';
ELSE   : 'else';
FI     : 'fi';
ELIF   : 'elif';
CASE   : 'case';
OF     : 'of';
ESAC   : 'esac';
LET    : 'let';
IN     : 'in';
WHILE  : 'while';
DO     : 'do';
OD     : 'od';
FOR    : 'for';
SKIP_RULE   : 'skip';
TRUE   : 'true';
FALSE  : 'false';
PUBLIC : 'public';
ETA    : 'eta';
INFIX  : 'infix';
INFIXR : 'infixr';
INFIXL : 'infixl';
AT     : 'at';
BEFORE : 'before';
AFTER  : 'after';

ASSIGN : ':=';
OR     : '!!';
AND    : '&&';
EQ     : '==';
NE     : '!=';
LT     : '<';
LE     : '<=';
GT     : '>';
GE     : '>=';
PLUS   : '+';
MINUS  : '-';
MUL    : '*';
DIV    : '/';
MOD    : '%';
DOT    : '.';

LPAREN : '(';
RPAREN : ')';
LBRACK : '[';
RBRACK : ']';
LBRACE : '{';
RBRACE : '}';
COMMA  : ',';
SEMICOLON : ';';
COLON  : ':';
ARROW  : '->';
UNDERSCORE : '_';

CUSTOM_OP : [+\-*/<>=!&|@%^?:]+ ;

// #-patterns (before LIDENT)
SHARP_VAL   : '#val';
SHARP_FUN   : '#fun';
SHARP_STR   : '#str';
SHARP_ARRAY : '#array';
SHARP_SEXP  : '#sexp';
SHARP_BOX   : '#box';

UIDENT : [A-Z][a-zA-Z_0-9]*;
LIDENT : [a-z][a-zA-Z_0-9]*;

DECIMAL : [0-9]+;

STRING : '"' ( ~["] | '""' )* '"';

CHAR : '\'' ( ~['] | '\'\'' | '\\n' | '\\t' ) '\'';

WS : [ \t\r\n]+ -> skip;
LINE_COMMENT : '--' ~[\r\n]* -> skip;
BLOCK_COMMENT : '(*' (BLOCK_COMMENT | .)*? '*)' -> skip;
