language/src/main/java/com/oracle/truffle/lama/parser/LamaParser.java
// Generated from /workspace/language/src/main/java/com/oracle/truffle/lama/parser/Lama.g4 by ANTLR 4.13.2
package com.oracle.truffle.lama.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LamaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, IMPORT=4, VAR=5, FUN=6, IF=7, THEN=8, ELSE=9, 
		FI=10, ELIF=11, CASE=12, OF=13, ESAC=14, LET=15, IN=16, WHILE=17, DO=18, 
		OD=19, FOR=20, SKIP_RULE=21, TRUE=22, FALSE=23, PUBLIC=24, ETA=25, INFIX=26, 
		INFIXR=27, INFIXL=28, AT=29, BEFORE=30, AFTER=31, ASSIGN=32, OR=33, AND=34, 
		EQ=35, NE=36, LT=37, LE=38, GT=39, GE=40, PLUS=41, MINUS=42, MUL=43, DIV=44, 
		MOD=45, DOT=46, LPAREN=47, RPAREN=48, LBRACK=49, RBRACK=50, LBRACE=51, 
		RBRACE=52, COMMA=53, SEMICOLON=54, COLON=55, ARROW=56, UNDERSCORE=57, 
		CUSTOM_OP=58, SHARP_VAL=59, SHARP_FUN=60, SHARP_STR=61, SHARP_ARRAY=62, 
		SHARP_SEXP=63, SHARP_BOX=64, UIDENT=65, LIDENT=66, DECIMAL=67, STRING=68, 
		CHAR=69, WS=70, LINE_COMMENT=71, BLOCK_COMMENT=72;
	public static final int
		RULE_program = 0, RULE_topScope = 1, RULE_importStatement = 2, RULE_scopeExpression = 3, 
		RULE_definition = 4, RULE_varDefinition = 5, RULE_varInit = 6, RULE_funDefinition = 7, 
		RULE_infixDefinition = 8, RULE_patternList = 9, RULE_pattern = 10, RULE_expression = 11, 
		RULE_sequenceExpression = 12, RULE_assignExpression = 13, RULE_binaryExpression = 14, 
		RULE_binaryOp = 15, RULE_prefixExpression = 16, RULE_postfixExpression = 17, 
		RULE_primary = 18, RULE_etaExpression = 19, RULE_literal = 20, RULE_identifier = 21, 
		RULE_arrayLiteral = 22, RULE_listLiteral = 23, RULE_sexp = 24, RULE_ifExpression = 25, 
		RULE_letExpression = 26, RULE_caseExpression = 27, RULE_caseBranch = 28, 
		RULE_loopExpression = 29, RULE_whileLoop = 30, RULE_doWhileLoop = 31, 
		RULE_forLoop = 32, RULE_forInit = 33, RULE_forStep = 34, RULE_lambdaExpression = 35, 
		RULE_argumentList = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "topScope", "importStatement", "scopeExpression", "definition", 
			"varDefinition", "varInit", "funDefinition", "infixDefinition", "patternList", 
			"pattern", "expression", "sequenceExpression", "assignExpression", "binaryExpression", 
			"binaryOp", "prefixExpression", "postfixExpression", "primary", "etaExpression", 
			"literal", "identifier", "arrayLiteral", "listLiteral", "sexp", "ifExpression", 
			"letExpression", "caseExpression", "caseBranch", "loopExpression", "whileLoop", 
			"doWhileLoop", "forLoop", "forInit", "forStep", "lambdaExpression", "argumentList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'@'", "'|'", "'import'", "'var'", "'fun'", "'if'", "'then'", 
			"'else'", "'fi'", "'elif'", "'case'", "'of'", "'esac'", "'let'", "'in'", 
			"'while'", "'do'", "'od'", "'for'", "'skip'", "'true'", "'false'", "'public'", 
			"'eta'", "'infix'", "'infixr'", "'infixl'", "'at'", "'before'", "'after'", 
			"':='", "'!!'", "'&&'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'.'", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "','", "';'", "':'", "'->'", "'_'", null, "'#val'", "'#fun'", 
			"'#str'", "'#array'", "'#sexp'", "'#box'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "IMPORT", "VAR", "FUN", "IF", "THEN", "ELSE", 
			"FI", "ELIF", "CASE", "OF", "ESAC", "LET", "IN", "WHILE", "DO", "OD", 
			"FOR", "SKIP_RULE", "TRUE", "FALSE", "PUBLIC", "ETA", "INFIX", "INFIXR", 
			"INFIXL", "AT", "BEFORE", "AFTER", "ASSIGN", "OR", "AND", "EQ", "NE", 
			"LT", "LE", "GT", "GE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "DOT", 
			"LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "COMMA", 
			"SEMICOLON", "COLON", "ARROW", "UNDERSCORE", "CUSTOM_OP", "SHARP_VAL", 
			"SHARP_FUN", "SHARP_STR", "SHARP_ARRAY", "SHARP_SEXP", "SHARP_BOX", "UIDENT", 
			"LIDENT", "DECIMAL", "STRING", "CHAR", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lama.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LamaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TopScopeContext topScope() {
			return getRuleContext(TopScopeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LamaParser.EOF, 0); }
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaVisitor ) return ((LamaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(74);
				importStatement();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			topScope();
			setState(81);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopScopeContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public TopScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).enterTopScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).exitTopScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaVisitor ) return ((LamaVisitor<? extends T>)visitor).visitTopScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopScopeContext topScope() throws RecognitionException {
		TopScopeContext _localctx = new TopScopeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topScope);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(83);
					definition();
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(89);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(LamaParser.IMPORT, 0); }
		public List<TerminalNode> LIDENT() { return getTokens(LamaParser.LIDENT); }
		public TerminalNode LIDENT(int i) {
			return getToken(LamaParser.LIDENT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LamaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LamaParser.COMMA, i);
		}
		public TerminalNode SEMICOLON() { return getToken(LamaParser.SEMICOLON, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaVisitor ) return ((LamaVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(IMPORT);
			setState(92);
			match(LIDENT);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(93);
				match(COMMA);
				setState(94);
				match(LIDENT);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(100);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScopeExpressionContext extends ParserRuleContext {
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ScopeExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scopeExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).enterScopeExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).exitScopeExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaVisitor ) return ((LamaVisitor<? extends T>)visitor).visitScopeExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScopeExpressionContext scopeExpression() throws RecognitionException {
		ScopeExpressionContext _localctx = new ScopeExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_scopeExpression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(103);
					definition();
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(109);
				expression();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public VarDefinitionContext varDefinition() {
			return getRuleContext(VarDefinitionContext.class,0);
		}
		public FunDefinitionContext funDefinition() {
			return getRuleContext(FunDefinitionContext.class,0);
		}
		public InfixDefinitionContext infixDefinition() {
			return getRuleContext(InfixDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaVisitor ) return ((LamaVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definition);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				varDefinition();
				}
				break;
			case FUN:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				funDefinition();
				}
				break;
			case INFIX:
			case INFIXR:
			case INFIXL:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				infixDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(LamaParser.VAR, 0); }
		public List<VarInitContext> varInit() {
			return getRuleContexts(VarInitContext.class);
		}
		public VarInitContext varInit(int i) {
			return getRuleContext(VarInitContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LamaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LamaParser.COMMA, i);
		}
		public TerminalNode SEMICOLON() { return getToken(LamaParser.SEMICOLON, 0); }
		public VarDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).enterVarDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).exitVarDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaVisitor ) return ((LamaVisitor<? extends T>)visitor).visitVarDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefinitionContext varDefinition() throws RecognitionException {
		VarDefinitionContext _localctx = new VarDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDefinition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(VAR);
			setState(118);
			varInit();
			setState(123);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(119);
					match(COMMA);
					setState(120);
					varInit();
					}
					} 
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(126);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarInitContext extends ParserRuleContext {
		public TerminalNode LIDENT() { return getToken(LamaParser.LIDENT, 0); }
		public AssignExpressionContext assignExpression() {
			return getRuleContext(AssignExpressionContext.class,0);
		}
		public VarInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).enterVarInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).exitVarInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaVisitor ) return ((LamaVisitor<? extends T>)visitor).visitVarInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarInitContext varInit() throws RecognitionException {
		VarInitContext _localctx = new VarInitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varInit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(LIDENT);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(130);
				match(T__0);
				setState(131);
				assignExpression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunDefinitionContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(LamaParser.FUN, 0); }
		public TerminalNode LIDENT() { return getToken(LamaParser.LIDENT, 0); }
		public TerminalNode LPAREN() { return getToken(LamaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LamaParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(LamaParser.LBRACE, 0); }
		public ScopeExpressionContext scopeExpression() {
			return getRuleContext(ScopeExpressionContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(LamaParser.RBRACE, 0); }
		public PatternListContext patternList() {
			return getRuleContext(PatternListContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(LamaParser.SEMICOLON, 0); }
		public FunDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).enterFunDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).exitFunDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaVisitor ) return ((LamaVisitor<? extends T>)visitor).visitFunDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunDefinitionContext funDefinition() throws RecognitionException {
		FunDefinitionContext _localctx = new FunDefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(FUN);
			setState(135);
			match(LIDENT);
			setState(136);
			match(LPAREN);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 22)) & ~0x3f) == 0 && ((1L << (_la - 22)) & 281372602138627L) != 0)) {
				{
				setState(137);
				patternList();
				}
			}

			setState(140);
			match(RPAREN);
			setState(141);
			match(LBRACE);
			setState(142);
			scopeExpression();
			setState(143);
			match(RBRACE);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(144);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfixDefinitionContext extends ParserRuleContext {
		public List<BinaryOpContext> binaryOp() {
			return getRuleContexts(BinaryOpContext.class);
		}
		public BinaryOpContext binaryOp(int i) {
			return getRuleContext(BinaryOpContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(LamaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LamaParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(LamaParser.LBRACE, 0); }
		public ScopeExpressionContext scopeExpression() {
			return getRuleContext(ScopeExpressionContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(LamaParser.RBRACE, 0); }
		public TerminalNode INFIX() { return getToken(LamaParser.INFIX, 0); }
		public TerminalNode INFIXR() { return getToken(LamaParser.INFIXR, 0); }
		public TerminalNode INFIXL() { return getToken(LamaParser.INFIXL, 0); }
		public TerminalNode AT() { return getToken(LamaParser.AT, 0); }
		public TerminalNode BEFORE() { return getToken(LamaParser.BEFORE, 0); }
		public TerminalNode AFTER() { return getToken(LamaParser.AFTER, 0); }
		public PatternListContext patternList() {
			return getRuleContext(PatternListContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(LamaParser.SEMICOLON, 0); }
		public InfixDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infixDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).enterInfixDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LamaListener ) ((LamaListener)listener).exitInfixDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaVisitor ) return ((LamaVisitor<? extends T>)visitor).visitInfixDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
